find_package(PkgConfig REQUIRED)
find_package(LibMicroHTTPD REQUIRED)
include_directories(${MHD_INCLUDE_DIRS})
find_package(GnuTLS REQUIRED)
include_directories(${GNUTLS_INCLUDE_DIRS})
pkg_search_module(JSON-C REQUIRED json-c)
include_directories(${JSON-C_INCLUDE_DIRS})
find_package (Threads REQUIRED)

set(SOURCE_FILES main.c url_handle.c command_handle.c utils.c)
add_executable(openvz_daemon ${SOURCE_FILES})
target_link_libraries(openvz_daemon ${MHD_LIBRARIES})
target_link_libraries(openvz_daemon ${GNUTLS_LIBRARIES})
target_link_libraries(openvz_daemon ${JSON-C_LIBRARIES})
target_link_libraries(openvz_daemon rt)
target_link_libraries(openvz_daemon ${CMAKE_THREAD_LIBS_INIT})